Add "updating" topic

--- a/lesson_walkthrough.ipynb
+++ b/lesson_walkthrough.ipynb
@@ -111,6 +111,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from mongomock import MongoClient\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "def reset_materials():\n",
+    "    client = MongoClient()\n",
+    "    db = client.swc\n",
+    "    db.materials.drop()\n",
+    "    with open('data/mongo-novice-materials.json') as f:\n",
+    "        db.materials.insert_many(json.load(f))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": true
@@ -1977,6 +1997,371 @@
     "    ).sort(\"spacegroup.number\"))\n",
     "    print(s, materials[0][\"spacegroup\"][\"number\"], materials[-1][\"spacegroup\"][\"number\"])\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Update"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "db.elements.drop()\n",
+    "with open('data/periodic_table.json') as f:\n",
+    "    for symbol, rest in json.load(f).items():\n",
+    "        doc = {\"Symbol\": symbol}\n",
+    "        doc.update(rest)\n",
+    "        db.elements.insert_one(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "halogens = [\"F\", \"Cl\", \"Br\", \"I\", \"At\"]\n",
+    "def halide_systems():\n",
+    "    for halogen in halogens:\n",
+    "        X = db.elements.find_one({\"Symbol\": halogen})[\"X\"]\n",
+    "        for doc in db.elements.find({\"X\": {\"$lt\": X}}):\n",
+    "            yield \"-\".join(sorted([doc[\"Symbol\"], halogen]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Cu-F', 'Cl-Cu', 'Br-Cu', 'Cu-I', 'At-Cu']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[s for s in list(halide_systems()) if 'Cu' in s]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "reset_materials()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.materials.find({\"chemsys\": \"Cu-F\"}).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "result = db.materials.update_one(\n",
+    "    {\"chemsys\": \"Cu-F\"},\n",
+    "    {\n",
+    "        \"$set\": {\n",
+    "            \"tags\": [\"halide\"]\n",
+    "        },\n",
+    "        \"$currentDate\": {\"lastModified\": True}\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.matched_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.modified_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('56cedcde7943f6405b34a56e'),\n",
+       " 'lastModified': datetime.datetime(2016, 2, 25, 10, 52, 24, 303000),\n",
+       " 'material_id': 'mp-1229',\n",
+       " 'tags': ['halide']}"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.materials.find_one({\"chemsys\": \"Cu-F\"},\n",
+    "                      {\"tags\": 1, \"lastModified\": 1, \"material_id\": 1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = db.materials.update_one(\n",
+    "    {\"material_id\": \"mp-1229\"},\n",
+    "    {\"$set\": {\"elasticity.calculations.source\": \"Private communication\"}}\n",
+    ")\n",
+    "\n",
+    "print(result.matched_count, result.modified_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "result = db.materials.update_many(\n",
+    "    {\"chemsys\": {\"$in\": list(halide_systems())}},\n",
+    "    {\"$addToSet\": {\"tags\": \"halide\"}}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1127, 0)"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.matched_count, result.modified_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1127"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.materials.find({\"tags\": \"halide\"}).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "result = db.materials.update_one(\n",
+    "    {\"material_id\": \"mp-NaN\"},\n",
+    "    {\"$set\": {\"elasticity.calculations.source\": \"Private communication\"}}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0)"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.matched_count, result.modified_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "result = db.materials.update_one(\n",
+    "    {\"material_id\": \"mp-NaN\"},\n",
+    "    {\"$set\": {\"elasticity.calculations.source\": \"Private communication\"}},\n",
+    "    upsert=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0, ObjectId('56cee74bc46979cbe90cc428'))"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.matched_count, result.modified_count, result.upserted_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('56cee74bc46979cbe90cc428'),\n",
+       " 'elasticity': {'calculations': {'source': 'Private communication'}},\n",
+       " 'material_id': 'mp-NaN'}"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.materials.find_one({\"material_id\": \"mp-NaN\"})"
    ]
   }
  ],
