--- a/lesson_walkthrough.ipynb
+++ b/lesson_walkthrough.ipynb
@@ -2305,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 130,
    "metadata": {
     "collapsed": true
    },
@@ -2320,7 +2320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 131,
    "metadata": {
     "collapsed": false
    },
@@ -2328,10 +2328,10 @@
     {
      "data": {
       "text/plain": [
-       "(0, 0, ObjectId('56cee74bc46979cbe90cc428'))"
+       "(0, 0, ObjectId('56cf4065c46979cbe90cc42a'))"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2342,7 +2342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 132,
    "metadata": {
     "collapsed": false
    },
@@ -2350,18 +2350,135 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('56cee74bc46979cbe90cc428'),\n",
+       "{'_id': ObjectId('56cf4065c46979cbe90cc42a'),\n",
        " 'elasticity': {'calculations': {'source': 'Private communication'}},\n",
        " 'material_id': 'mp-NaN'}"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "db.materials.find_one({\"material_id\": \"mp-NaN\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Removing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "result = db.materials.delete_many({\"material_id\": \"mp-NaN\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "result = db.materials.delete_many({\"nelements\": 1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "419"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.deleted_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "result = db.materials.delete_many({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65721"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.deleted_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.materials.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "db.materials.drop()"
    ]
   }
  ],
