Add aggregation topic
Aggregation exercises taken from https://github.com/materialsvirtuallab/nano106/blob/8e150151e485d71e52dc91867b9ac78769ae9ffe/lectures/lecture_5_the_230_space_groups/Datamining%20the%20Materials%20Project%20for%20Space%20Group%20statistics.ipynb

--- a/lesson_walkthrough.ipynb
+++ b/lesson_walkthrough.ipynb
@@ -2480,6 +2480,362 @@
    "source": [
     "db.materials.drop()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Re(Importing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from mongomock import MongoClient\n",
+    "#from pymongo import MongoClient\n",
+    "\n",
+    "def reset_materials():\n",
+    "    client = MongoClient()\n",
+    "    db = client.swc\n",
+    "    db.materials.drop()\n",
+    "    with open('data/mongo-novice-materials.json') as f:\n",
+    "        db.materials.insert_many(json.load(f))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 loop, best of 3: 3.03 s per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit reset_materials()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('data/materials.mongoimportable.json', 'w') as outfile:\n",
+    "    with open('data/mongo-novice-materials.json') as infile:\n",
+    "        docs = json.load(infile)\n",
+    "        outfile.writelines([json.dumps(doc)+'\\n' for doc in docs])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "connected to: 127.0.0.1\n",
+      "2016-02-25T10:46:31.004-0800 \t\t\t53700\t17900/second\n",
+      "2016-02-25T10:46:31.600-0800 check 9 66140\n",
+      "2016-02-25T10:46:31.607-0800 imported 66140 objects\n"
+     ]
+    }
+   ],
+   "source": [
+    "db.materials.drop()\n",
+    "!mongoimport --db swc --collection materials < data/materials.mongoimportable.json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aggregation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cursor = db.materials.aggregate(\n",
+    "    [\n",
+    "        {\"$group\": {\"_id\": \"$nelements\", \"count\": {\"$sum\": 1}}}\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': 8, 'count': 5}\n",
+      "{'_id': 7, 'count': 68}\n",
+      "{'_id': 5, 'count': 5890}\n",
+      "{'_id': 4, 'count': 17561}\n",
+      "{'_id': 6, 'count': 866}\n",
+      "{'_id': 2, 'count': 9809}\n",
+      "{'_id': 3, 'count': 31522}\n",
+      "{'_id': 1, 'count': 419}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for doc in cursor:\n",
+    "    print(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': 8, 'count': 5}\n",
+      "{'_id': 1, 'count': 6}\n",
+      "{'_id': 7, 'count': 65}\n",
+      "{'_id': 5, 'count': 5484}\n",
+      "{'_id': 4, 'count': 15113}\n",
+      "{'_id': 6, 'count': 816}\n",
+      "{'_id': 2, 'count': 1519}\n",
+      "{'_id': 3, 'count': 15117}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor = db.materials.aggregate(\n",
+    "    [\n",
+    "        {\"$match\": {\"elements\": \"O\"}},\n",
+    "        {\"$group\": {\"_id\": \"$nelements\", \"count\": {\"$sum\": 1}}}\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "for doc in cursor:\n",
+    "    print(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': 3, 'count': 15117}\n",
+      "{'_id': 4, 'count': 15113}\n",
+      "{'_id': 5, 'count': 5484}\n",
+      "{'_id': 2, 'count': 1519}\n",
+      "{'_id': 6, 'count': 816}\n",
+      "{'_id': 7, 'count': 65}\n",
+      "{'_id': 1, 'count': 6}\n",
+      "{'_id': 8, 'count': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor = db.materials.aggregate(\n",
+    "    [\n",
+    "        {\"$match\": {\"elements\": \"O\"}},\n",
+    "        {\"$group\": {\"_id\": \"$nelements\", \"count\": {\"$sum\": 1}}},\n",
+    "        {\"$sort\": {\"count\": -1}}\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "for doc in cursor:\n",
+    "    print(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('56cf4c04c46979cbe913d4af'),\n",
+       " 'chemsys': 'Fe',\n",
+       " 'elasticity': None,\n",
+       " 'elements': ['Fe'],\n",
+       " 'material_id': 'mp-568345',\n",
+       " 'nelements': 1,\n",
+       " 'pretty_formula': 'Fe',\n",
+       " 'spacegroup': {'crystal_system': 'cubic',\n",
+       "  'hall': '-P 4 2 3',\n",
+       "  'number': 221,\n",
+       "  'point_group': '4/mmm',\n",
+       "  'source': 'spglib',\n",
+       "  'symbol': 'Pm-3m'}}"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.materials.find_one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': 14, 'count': 5962, 'symbol': 'P2_1/c'}\n",
+      "{'_id': 1, 'count': 4593, 'symbol': 'P1'}\n",
+      "{'_id': 225, 'count': 4109, 'symbol': 'Fm-3m'}\n",
+      "{'_id': 2, 'count': 4010, 'symbol': 'P-1'}\n",
+      "{'_id': 62, 'count': 3562, 'symbol': 'Pmnb'}\n",
+      "{'_id': 15, 'count': 2736, 'symbol': 'C2/c'}\n",
+      "{'_id': 12, 'count': 2344, 'symbol': 'C2/m'}\n",
+      "{'_id': 139, 'count': 1797, 'symbol': 'I4/mmm'}\n",
+      "{'_id': 194, 'count': 1685, 'symbol': 'P6_3/mmc'}\n",
+      "{'_id': 221, 'count': 1630, 'symbol': 'Pm-3m'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor = db.materials.aggregate(\n",
+    "    [\n",
+    "        {\"$group\": {\n",
+    "                \"_id\": \"$spacegroup.number\",\n",
+    "                \"count\": {\"$sum\": 1},\n",
+    "                \"symbol\": {\"$first\": \"$spacegroup.symbol\"},\n",
+    "            }},\n",
+    "        {\"$sort\": {\"count\": -1}},\n",
+    "        {\"$limit\": 10}\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "for doc in cursor:\n",
+    "    print(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_chemistry(doc):\n",
+    "    anion = db.elements.find(\n",
+    "        {\"Symbol\": {\"$in\": doc[\"elements\"]}},\n",
+    "        {\"Symbol\": 1, \"X\": 1, \"_id\": 0}\n",
+    "    ).sort([('X', -1)])[0][\"Symbol\"]\n",
+    "    if anion == \"O\":\n",
+    "        return \"Oxide\"\n",
+    "    elif anion == \"S\":\n",
+    "        return \"Sulfide\"\n",
+    "    elif anion == \"F\":\n",
+    "        return \"Fluoride\"\n",
+    "    elif anion == \"Cl\":\n",
+    "        return \"Chloride\"\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for doc in db.materials.find({\"elements\": {\"$in\": [\"O\", \"S\", \"F\", \"Cl\"]}}, {\"elements\": 1}):\n",
+    "    anion = get_chemistry(doc)\n",
+    "    db.materials.update_one({\"_id\": doc[\"_id\"]}, {\"$set\": {\"anion_chemistry\": anion}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': 14, 'count': 4013, 'symbol': 'P2_1/c'}\n",
+      "{'_id': 1, 'count': 3424, 'symbol': 'P1'}\n",
+      "{'_id': 2, 'count': 3039, 'symbol': 'P-1'}\n",
+      "{'_id': 15, 'count': 1856, 'symbol': 'C2/c'}\n",
+      "{'_id': 62, 'count': 1702, 'symbol': 'Pmnb'}\n",
+      "{'_id': 12, 'count': 1415, 'symbol': 'C2/m'}\n",
+      "{'_id': 8, 'count': 975, 'symbol': 'Cm'}\n",
+      "{'_id': 11, 'count': 877, 'symbol': 'P2_1/m'}\n",
+      "{'_id': 4, 'count': 759, 'symbol': 'P2_1'}\n",
+      "{'_id': 166, 'count': 606, 'symbol': 'R-3m'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor = db.materials.aggregate(\n",
+    "    [\n",
+    "        {\"$match\": {\"anion_chemistry\": \"Oxide\"}},\n",
+    "        {\"$group\": {\n",
+    "                \"_id\": \"$spacegroup.number\",\n",
+    "                \"count\": {\"$sum\": 1},\n",
+    "                \"symbol\": {\"$first\": \"$spacegroup.symbol\"},\n",
+    "            }},\n",
+    "        {\"$sort\": {\"count\": -1}},\n",
+    "        {\"$limit\": 10}\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "for doc in cursor:\n",
+    "    print(doc)"
+   ]
   }
  ],
  "metadata": {
