Add indexes topic

--- a/lesson_walkthrough.ipynb
+++ b/lesson_walkthrough.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 207,
    "metadata": {
     "collapsed": true
    },
@@ -2835,6 +2835,202 @@
     "\n",
     "for doc in cursor:\n",
     "    print(doc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Indexes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 loops, best of 3: 47.1 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "db.materials.distinct(\"spacegroup.crystal_system\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'spacegroup.crystal_system_1'"
+      ]
+     },
+     "execution_count": 294,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.materials.create_index([(\"spacegroup.crystal_system\", 1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id_': {'key': [('_id', 1)], 'ns': 'swc.materials', 'v': 1},\n",
+      " 'spacegroup.crystal_system_1': {'key': [('spacegroup.crystal_system', 1)],\n",
+      "                                 'ns': 'swc.materials',\n",
+      "                                 'v': 1}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint(db.materials.index_information())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000 loops, best of 3: 296 µs per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "db.materials.distinct(\"spacegroup.crystal_system\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 loops, best of 3: 12.1 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit db.materials.find_one({\"material_id\": \"mp-49\"}, {\"pretty_formula\": 1, \"_id\": 0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'material_id_1_pretty_formula_1'"
+      ]
+     },
+     "execution_count": 306,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.materials.create_index([(\"material_id\", 1), (\"pretty_formula\", 1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000 loops, best of 3: 187 µs per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit db.materials.find_one({\"material_id\": \"mp-49\"}, {\"pretty_formula\": 1, \"_id\": 0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pretty_formula_1_material_id_1'"
+      ]
+     },
+     "execution_count": 308,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.materials.drop_index([(\"material_id\", 1), (\"pretty_formula\", 1)])\n",
+    "db.materials.create_index([(\"pretty_formula\", 1), (\"material_id\", 1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 loops, best of 3: 12.1 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit db.materials.find_one({\"material_id\": \"mp-49\"}, {\"pretty_formula\": 1, \"_id\": 0})"
    ]
   }
  ],
